style: move rotating logo significantly right to avoid any overlap with building banner

--- a/web/src/pages/Home.css
+++ b/web/src/pages/Home.css
@@ -402,8 +402,7 @@
 .badge-float {
     position: absolute;
     top: -30px;
-    right: -50px;
-    /* Moved further right */
+    right: -100px;
     width: 100px;
     clip-path: circle(50%);
     filter: drop-shadow(0 15px 30px rgba(0, 0, 0, 0.3));
